--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,6 @@ html, body {
 	font-weight: bold;
 }
 
-footer {
-	color: white;
-    bottom: 0;
-    width: 100%;
-    line-height: 60px;
-    background-color: var(--black-color);
-}
-
 .logo {
 	margin: 3% 0 3% 0;
 }
@@ -27,6 +19,15 @@ footer {
 	margin-left: 16px;
 	text-decoration: none;
 	color: var(--black-color);
+}
+
+footer {
+	color: white;
+    bottom: 0;
+    width: 100%;
+    line-height: 60px;
+    background-color: var(--black-color);
+	margin-top: 200px;
 }
 
 .footer-column {
@@ -77,4 +78,47 @@ footer {
 
 .accent-text {
 	color: var(--accent-color)
+}
+
+.showcase-item {
+	flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: top;
+	text-decoration: none;
+	color: var(--black-color);
+}
+
+.showcase-item:hover {
+	color: var(--black-color);
+}
+
+.showcase-item-circle {
+	height: 80px;
+	width: 80px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	background-color: #F5F5F6;
+}
+
+.showcase-item-header {
+	font-size: 18px;
+	font-weight: bold;
+	text-align: center;
+	margin-top: 20px;
+}
+
+.showcase-item-text {
+	font-size: 14px;
+	font-weight: 400;
+	opacity: 30%;
+	text-align: center;
+	margin-top: 20px;
+}
+
+.showcase-item-icon {
+	width: 50px;
+	height: 50px;
 }
