--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,13 @@ footer {
 	width: 50px;
 	height: 50px;
 }
+
+.navbar-nav {
+    text-align: center;
+}
+.navbar-nav>li {
+    float: initial;
+}
+.nav>li {
+    display:inline-block;
+}
