--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,19 @@ footer {
 	text-align: center;
 	font-size: 36px;
 	font-weight: 900;
+	margin-bottom: 50px;
+	margin-top: 100px;
+}
+
+.body-header2 {
+	text-align: left;
+	font-size: 18px;
+	font-weight: bold;
+	margin-top: 40px;
+}
+
+.body-text {
+	font-weight: 400;
 }
 
 .body-subheader-small {
